--- a/API3.csproj
+++ b/API3.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="RestSharp" Version="107.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
